[package]
name = "algos"
version = "0.1.0"
authors = ["alexander <alexanderheimat@gmail.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "default"
path = "src/main.rs"

[[bin]]
name = "bench"
path = "src/bench/mod.rs"

[dependencies]
rand = "0.8.3"
clap = "2.33.3"
